fix text-horizontal-align

--- a/app/styles/controls/label.less
+++ b/app/styles/controls/label.less
@@ -1,21 +1,3 @@
-.pl-label {
-  &.pl-text-horizontal-Left {
-    text-align: left;
-  }
-
-  &.pl-text-horizontal-Right {
-    text-align: right;
-  }
-
-  &.pl-text-horizontal-Center {
-    text-align: center;
-  }
-  &.pl-text-horizontal-Justify {
-    text-align: justify;
-  }
-  
-}
-
 .pl-text-trimming{
   white-space: nowrap !important;
   overflow: hidden;
